Bug 153787 - Chart wizard: type description text gets overwritten
Summary: Chart wizard: type description text gets overwritten
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart-Wizard
  Show dependency treegraph
 
Reported: 2023-02-23 08:54 UTC by Xisco Faulí
Modified: 2023-03-10 13:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (34.27 KB, image/png)
2023-02-23 08:54 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-02-23 08:54:35 UTC
Created attachment 185541 [details]
screenshot

Steps to reproduce:
1. Open calc
2. Insert - Chart
3. Hover the different chart types

-> Type description text gets scrambled. See screenshot

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 14844d835cc5d6dfde499a0b1074aea5dcff4fc7
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-02-23 08:55:22 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2023-02-15 13:18:06 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2023-02-15 16:56:24 +0000
commit 0c9f93e9079a60725e6ff62bfc4a6a8a7254680e (patch)
tree c3a1c2d9bdd2b283e668a72ffd6ee5899e654cf2
parent 1c45e1971cdd88f54a3cfb89622fdfa6fa8fcf31 (diff)
tdf#153633 color description in chart colors options always black

Bisected with: bibisect-linux64-7.6

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2023-03-02 16:41:58 UTC
hum, we draw both texts in the one paint, that's unexpected
Comment 3 Commit Notification 2023-03-02 20:01:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/caa1d1ccf39ff8a60b7d89dd53afbf73d3cafeca

Resolves: tdf#153787 highlighted entry text overdraws selected entry text

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2023-03-02 20:02:29 UTC
done in trunk, backport to 7-5 in gerrit
Comment 5 Commit Notification 2023-03-09 12:35:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/73e307eb0c7811b84b6fb72f3241ea91a0b760ff

Resolves: tdf#153787 highlighted entry text overdraws selected entry text

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2023-03-10 13:57:39 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 082d009b6a156faa74c9966b0dffc5fa6ce22287
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Caolán and Xisco!