Resolves: tdf#153787 highlighted entry text overdraws selected entry text

Change-Id: Iabf1d4a672aa508c5143f12169678278186ddd47
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148099
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>